refactor: revision dashboard use dataTableFactory
- The taskManager does not need to build the table anymore
- The entity tableTaskService could be removed
- Add a new Query dataTable for querying all tasks (not possible with orm)
- Removed dataTable routes from TaskController (is now generic DataTablesController)

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -742,7 +742,7 @@ task:
             edit_revision: 'Edit revision'
             go_revision: Revision
         column:
-            version_tag: 'New version'
+            version_next_tag: 'New version'
             actions: Actions
             assignee: Assignee
             deadline: Deadline
@@ -772,6 +772,7 @@ task:
         hide: 'Hide finished tasks (%number%)'
         show: 'Show finished tasks (%number%)'
     close: Close
+    delay_days: '%number% days'
     history: History
     in_progress: 'This task is '
     planned:
