fix: translation approved to finished
Just like in the revision detail page, we show the approved tasks as finished tasks.

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -790,7 +790,7 @@ task:
         rejected: 'Rejected task "%title%" for "%document%"'
         updated: 'Update task "%title%" for "%document%"'
     status:
-        approved: Approved
+        approved: Finished
         completed: Completed
         history:
             approved: '%user% approved the task'
