feat: add filter for next version tag

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -820,9 +820,9 @@ task:
     filters: Filters
     filter:
         status: Statuses
-        version: Versions
         assignee: Assignees
         requester: Requesters
+        version_next_tag: New versions
         submit: Search
         reset: Clear
 uploaded-file:
