fix: add warning if table renders server side
Server side we can not search the document title. Because it's rendered from the rawData

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -738,6 +738,7 @@ task:
         success: 'Task "%title%" successfully created.'
         title: 'Add a new task'
     dashboard:
+        search_warning: 'More than %count% tasks, search on document title is impossible.'
         action:
             edit_revision: 'Edit revision'
             go_revision: Revision
