--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1003,6 +1003,14 @@ view:
         index:
             title: 'User list'
         permissions:
+            page_title: 'Permissions Overview'
+            titles:
+                content_type_permissions: 'Permissions of content types'
+                roles_specific_functionalities: 'Roles for specific functionalities'
+                roles_hierarchy: 'Roles hierarchy'
+                descriptions:
+                    roles_hierarchy_description: 'Access to a role implies access to all roles below it in the hierarchy. Hierarchical roles can be assigned to grant and limit access to the content type.'
+                    roles_functionalities_description: 'These roles are specifically for functionality and have nothing to do with content management. They are functional roles that grant access to specific CMS features.'
             table_headers:
                 content_type: 'Content Type'
                 icon: Icon
@@ -1016,6 +1024,26 @@ view:
                 archive: Archive
                 show_link_create: 'Show link create'
                 show_link_search: 'Show link search'
+                role: 'Role'
+                description: 'Description'
+            roles_functionality:
+                role_api: 'API role for accessing basic functionalities.'
+                role_form_crm: 'Form CRM grants access to the mini CRM management tool included in the CMS.'
+                role_task_manager: 'Task Manager role for managing tasks.'
+                role_allow_align: 'Align environment grants access to a tool that allows bulk publishing of various documents.'
+                role_user_management: 'User Management role for managing users.'
+                role_copy_paste: 'Copy/Paste role for copying and pasting content on documents.'
+                role_default_search: 'Default Search role for default search functionality.'
+                role_super_user: 'Super User role for super user functionalities.'
+                role_user_read: 'User Read role for reading user data.'
+        specific_permissions:
+            back: 'Back'
+            breadcrumb:
+                permission_overview: 'Permission Overview'
+                specific_role: 'specific role'
+            titles:
+                permissions_overview: 'Permissions Overview'
+                specific_roles: 'Specific roles of fields'
     index:
         reorder: 'Reorder views'
         column:
