--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -877,6 +877,7 @@ user:
             enabled: Enabled
             id: 'User ID'
             lastLogin: 'Last Login'
+            expirationDate: 'Expiration Date'
             roles: Roles
             username: Username
             locale_preferred: 'Locale preferred'
