Add new MediaLibraryDocumentDTO.php and validator
Will be used for creating/updating folders and files

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -2,6 +2,8 @@ media_library:
     home: Home
     submit: Save
     cancel: Cancel
+    error:
+        folder_exists: 'Folder name already exists.'
     folder:
         add:
             title: 'Add folder'
