refactor-feat: fixed routing of buttons (didnt try delete yet), fixed translation keys. Need to work on display, i cant delete 'Delete selected' button yet and the cases. And I think I have the wrong numbers for Total in EMS, ES and deleted. I still need to correct the code, might find duplicates.

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -509,7 +509,7 @@ channel:
     menu: Channels
 environment:
     index:
-        reorder: Reorder
+        reorder: 'Reorder environments'
         column:
             label: Label
             alias: Alias
