fix: validator support file and folder

--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -3,6 +3,7 @@ media_library:
     submit: Save
     cancel: Cancel
     error:
+        file_exists: 'File name already exists.'
         folder_exists: 'Folder name already exists.'
     folder:
         add:
