--- a/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-component.en.yml
@@ -1,7 +1,7 @@
 media_library:
     home: Home
     submit: Save
-    cancel: Cancel
+    close: Close
     error:
         file_exists: 'File name already exists.'
         folder_exists: 'Folder name already exists.'
