ref: dynamic forms

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -6,7 +6,7 @@ link_modal:
         subject: 'Subject'
         body: 'Body'
         href: 'URL'
-        target: 'Target'
+        target_blank: 'Open links in a new tab (_blank)'
     link_type:
         url: 'URL'
         internal: 'Internal Link'
