fix: add file field

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -1,6 +1,7 @@
 link_modal:
     field:
-        field_type: 'Field type'
+        file: 'File'
+        link_type: 'Link type'
         data_link: 'Internal document'
         mailto: 'To'
         subject: 'Subject'
