--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1031,6 +1031,12 @@ view:
     user:
         index:
             title: 'User list'
+    wysiwyg:
+        index:
+            column:
+                name: Profiles
+        wysiwyg_profiles_label: 'WYSIWYG profiles'
+        wysiwyg_style_sets: 'WYSIWYG styles sets'
     index:
         reorder: 'Reorder views'
         column:
@@ -1057,6 +1063,8 @@ views:
         revision-toolbar-html:
             add-to-release: 'Add to release'
 wysiwyg:
+    actions:
+        edit_button: Edit
     invalid_config_format: 'Format not valid: %msg%'
 revision:
     draft-in-progress:
