--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1013,12 +1013,15 @@ view:
         index:
             title: 'User list'
     wysiwyg:
+        actions:
+            delete_selected: 'Delete selected'
         index:
+            reorder: Reorder
             column:
                 profileName: Profiles
                 stylesSetName: 'Styles set'
         wysiwyg_profiles_label: 'WYSIWYG profiles'
-        wysiwyg_styles_set_label: 'WYSIWYG styles sets'
+        wysiwyg_styles_set_label: 'WYSIWYG styles set'
     index:
         reorder: 'Reorder views'
         column:
