fix: add demo example of form with files
Send files in mail and through api submission
Added the originalName inside the formDataFile

--- a/demo/skeleton/translations/messages.fr.yaml
+++ b/demo/skeleton/translations/messages.fr.yaml
@@ -29,6 +29,7 @@ ems_form:
     loading: 'en cours de chargement...'
 features:
     discover: 'Découvrez toutes les fonctionnalités'
+files_browse: 'Choisir des fichiers'
 footer:
     join-us-github: 'Join-us on GitHub'
 js:
