refactor(core): migration environment table index (#820)
Co-authored-by: David mattei <d.mattei89@gmail.com>

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -507,6 +507,25 @@ channel:
         reorder: 'Reorder channels'
         title: 'List of channels'
     menu: Channels
+environment:
+    index:
+        reorder: 'Reorder environments'
+        column:
+            label: Label
+            alias: Alias
+            name: Name
+            index: Index
+            total_indexed_label: "Total in ES"
+            total_in_ems: 'Total in ems'
+            total_mark_has_deleted: 'Total deleted'
+    actions:
+        rebuild_button: Rebuild
+        view_button: View
+        edit_button: Edit
+        delete: Delete
+        delete_confirm: 'Delete the "%label%" environment?'
+        delete_selected: 'Delete selected'
+        delete_selected_confirm: 'Delete all selected environments?'
 command:
     reindex:
         end: 'The content type %contenttype%''s documents have been reindexed in %environment% (index: %index%)'
