feat: anchor link

--- a/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/emsco-forms.en.yml
@@ -1,5 +1,6 @@
 link_modal:
     field:
+        anchor: 'Anchor'
         file: 'File'
         link_type: 'Link type'
         data_link: 'Internal document'
@@ -10,6 +11,7 @@ link_modal:
         submit: 'Set link'
         target_blank: 'Open links in a new tab (_blank)'
     link_type:
+        anchor: 'Anchor'
         url: 'URL'
         internal: 'Internal Link'
         file: 'File'
