--- a/EMS/admin-ui-bundle/src/Resources/translations/emsco-form.en.yml
+++ b/EMS/admin-ui-bundle/src/Resources/translations/emsco-form.en.yml
@@ -14,12 +14,17 @@ table:
       actions: 'Actions'
       loop_count: '#'
 form:
+  index:
+    reorder: 'Reorder'
+    column:
+      name: 'Machine Name'
+      label: 'UI Label'
   data:
     bool_table_column:
       true_value: 'Check'
       false_value: 'Uncheck'
   header:
-    checkbo:
+    checkbox:
       select-all: 'Select all'
 view:
   wysiwyg:
