feat: action buttons

--- a/EMS/admin-ui-bundle/src/Resources/translations/form.en.yml
+++ b/EMS/admin-ui-bundle/src/Resources/translations/form.en.yml
@@ -1,4 +1,8 @@
 edit_image:
+  flip:
+    group: 'Flip'
+    horizontal: 'Flip horizontal'
+    vertical: 'Flip vertical'
   zoom:
     minus: 'Zoom in'
     plus: 'Zoom out'
