--- a/EMS/admin-ui-bundle/src/Resources/translations/form.en.yml
+++ b/EMS/admin-ui-bundle/src/Resources/translations/form.en.yml
@@ -7,6 +7,7 @@ edit_image:
     minus: 'Zoom in'
     plus: 'Zoom out'
     group: 'Zoom'
+    reset: 'Reset view'
   rotate:
     group: 'Rotate'
     left: 'Rotate left'
