feat(demo): improve security demo
Add login page with the possibility for sso (saml or OAuth2, if enabled)

--- a/demo/skeleton/translations/messages.en.yaml
+++ b/demo/skeleton/translations/messages.en.yaml
@@ -1,1 +1,11 @@
+emsch:
+  security:
+    exception:
+      bad_credentials: 'Bad credentials!'
+      error: 'Something went wrong!'
+    form:
+      username: Username
+      password: Password
+      submit: Login
+login: Login
 files_browse: 'Choose files'
