feat(core/view): define contentType default overview

--- a/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
+++ b/EMS/core-bundle/src/Resources/translations/EMSCoreBundle.en.yml
@@ -1048,7 +1048,13 @@ view:
         column:
             name: Name
             label: Label
+            type: Type
+            definition: Definition
     actions:
+        define:
+            title: 'Define'
+            default_overview: 'As default overview'
+        undefine: 'Undefine'
         edit: Edit
         duplicate: Duplicate
         duplicate_confirm: 'Do you confirm?'
